--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /HeaderFiles/.vs/HeaderFiles/v16
 /HowToDebug/.vs/HowToDebug/v16
 /conditionals/.vs/conditionals/v16
+/loopy/.vs/referencesandpointers/v16
