--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /HowToDebug/.vs/HowToDebug/v16
 /conditionals/.vs/conditionals/v16
 /loopy/.vs/referencesandpointers/v16
+/pointers/.vs/pointers/v16
