--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /conditionals/.vs/conditionals/v16
 /loopy/.vs/referencesandpointers/v16
 /pointers/.vs/pointers/v16
+/references/.vs/references/v16
