--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /classVstruct/.vs/classVstruct/v16
 /class2/.vs/class2/v16
 /enum/.vs/enum/v16
+/Constructors/.vs/Constructors/v16
+/destructor/.vs/destructor/v16
+/Inheritance/.vs/Inheritance/v16
