--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Constructors/.vs/Constructors/v16
 /destructor/.vs/destructor/v16
 /Inheritance/.vs/Inheritance/v16
+/virtualFunctions/.vs/virtualFunctions/v16
