--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /destructor/.vs/destructor/v16
 /Inheritance/.vs/Inheritance/v16
 /virtualFunctions/.vs/virtualFunctions/v16
+/Interface/.vs/Interface/v16
