--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Inheritance/.vs/Inheritance/v16
 /virtualFunctions/.vs/virtualFunctions/v16
 /Interface/.vs/Interface/v16
+/Visability/.vs/Visability/v16
