how strings wertk

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /virtualFunctions/.vs/virtualFunctions/v16
 /Interface/.vs/Interface/v16
 /Visability/.vs/Visability/v16
+/Arrays/.vs/Arrays/v16
+/howcppStringswork/.vs/howcppStringswork/v16
