member initializer list

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@
 /Visability/.vs/Visability/v16
 /Arrays/.vs/Arrays/v16
 /howcppStringswork/.vs/howcppStringswork/v16
+/stringLiteral/.vs/stringLiteral/v16
+/stringLiteral/Project1/.vs/Project1/v16
+/stringLiteral/Project1
+/MemeberIniutializerList/.vs/MemeberIniutializerList/v16
