--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /stringLiteral/Project1/.vs/Project1/v16
 /stringLiteral/Project1
 /MemeberIniutializerList/.vs/MemeberIniutializerList/v16
+/TernaryOperators/.vs/TernaryOperators/v16
